moved swagger to its module
