# swagger/swagger.yaml
@@ -11,6 +11,15 @@ info:
     url: "https://www.apache.org/licenses/LICENSE-2.0.html"
 servers:
   - url: "http://localhost:3000"
+components:
+  securitySchemes:
+    basicAuth:
+      type: http
+      scheme: basic
+    bearerAuth: # arbitrary name for the security scheme
+      type: http
+      scheme: bearer
+      bearerFormat: JWT    # optional, arbitrary value for documentation purposes
 paths:
   /api/v1/ping:
     get:
@@ -20,11 +29,6 @@ paths:
       responses:
         '200':
           description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                example: "{"
   /oauth/authorize:
     get:
       tags:
@@ -46,7 +50,6 @@ paths:
           description: Client not found in the system
         '400':
           description: Bad Request, missing params
-
   /oauth/token:
     post:
       tags:
@@ -86,5 +89,51 @@ paths:
           description: Client not found in the system
         '400':
           description: Bad Request, missing body content
+        '503':
+          description: Error Service Unavailable
+  /oauth/token/refresh:
+    post:
+      tags:
+        - OAuth Flows
+      description: Refresh Token.
+      security:
+        - basicAuth: [ ]
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              required:
+                - grant_type
+                - refresh_token
+              properties:
+                grant_type:
+                  type: string
+                  description: Grant Type [refresh_token]
+                refresh_token:
+                  type: string
+                  description: Refresh Token value
+      responses:
+        '200':
+          description: Successfully
+        '404':
+          description: Client not found in the system
+        '400':
+          description: Bad Request, missing Basic Auth or body content
+        '503':
+          description: Error Service Unavailable
+  /api/v1/protected-test:
+    get:
+      tags:
+        - Retrieve data after authentication
+      security:
+        - bearerAuth: [ ]
+      responses:
+        '200':
+          description: Authorized
+        '404':
+          description: Client not found in the system
+        '400':
+          description: Bad Request, missing Basic Auth or body content
         '503':
           description: Error Service Unavailable
